--- a/task2/task2.html
+++ b/task2/task2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href = "task2.css">
 </head>
 <body>
-    <h5><a href = "index.html"> На главную</a></h5>
+    <h5><a href = "/index.html"> На главную</a></h5>
     <br>
     <div class="card">
         <a href=""> <img src="like.jpg" width="25px"></a>
