--- a/task5/task5.html
+++ b/task5/task5.html
@@ -10,7 +10,7 @@
 
     <div class="blocks">
         <div class="big-image">
-            <img class = "mainPicture" src="/images/image1.jpg" alt="no image" width = "100%">
+            <img class = "mainPicture" src="images/image1.jpg" alt="no image" width = "100%">
         </div>
 
         
