--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <a href = "task2/task2.html"> <li><u> Практическое задание №2</u></li></a></li>
     <a href ="task3/task3.html"> <li><u> Практическое задание №3</u></li></a>
     <a href ="task4/task4.html"> <li><u> Практическое задание №4</u></li></a>
-    <a href ="task5/task5.html"> <li><u> Практическое задание №5</u></li></a>
+    <a href ="task5-1/task5-1.html"> <li><u> Практическое задание №5</u></li></a>
+    <a href ="task5/task5.html"> <li><u> Практическое задание №6</u></li></a>
+
    </ol>
 </body>
 </html>
