--- a/task5-1/task5-1.html
+++ b/task5-1/task5-1.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="menu-group">
-        <div>
+        <div class="btn-block">
         <button id="menu-btn">Меню</button>
         </div>
 
